fix visibility of steps

--- a/src/pages/system-map.scss
+++ b/src/pages/system-map.scss
@@ -27,7 +27,7 @@
   }
 
   .step {
-    visibility: visible;
+    visibility: hidden;
     margin: 0 auto;
     background-color: rgba(221, 124, 124, 0.1);
     pointer-events: none;
